samples/_failures_safe/1761216110_6d8f5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3c23485.c: In function ‘main’:
./samples/SAFE/__tmp_c3c23485.c:169:5: error: expected expression at end of input
  169 |     TokenList* tokens =
      |     ^~~~~~~~~
./samples/SAFE/__tmp_c3c23485.c:169:5: error: expected declaration or statement at end of input
